# The-Smooth-Operator

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  walkthrough.md
.github/workflows/: cd.yml  ci.yml  eval.yml
docs/: api.md  architecture.md  evaluation_report.md  runbook.md
infrastructure/docker/: .dockerignore  Dockerfile.api  Dockerfile.inference  Dockerfile.worker
infrastructure/helm/smooth-operator/: Chart.yaml  values.yaml
infrastructure/k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets.yaml  vectordb-statefulset.yaml  worker-deployment.yaml
infrastructure/monitoring/: alertmanager.yml  prometheus.yml
orchestration/: __init__.py
orchestration/prefect_flows/: __init__.py  campaign_flow.py  eval_flow.py  ingestion_flow.py  retrain_flow.py
requirements/: base.txt  dev.txt  ml.txt
src/: __init__.py
src/agents/: __init__.py  enricher_agent.py  orchestrator.py  reply_agent.py  scorer_agent.py  scraper_agent.py  writer_agent.py
src/agents/tools/: __init__.py  analysis_tools.py  email_tools.py  search_tools.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  campaigns.py  emails.py  health.py  leads.py
src/api/schemas/: __init__.py  models.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  models.py  session.py
src/evaluation/: __init__.py  runner.py
src/evaluation/benchmarks/: __init__.py  baselines.py
src/evaluation/judges/: __init__.py  llm_judge.py
src/evaluation/metrics/: __init__.py  agent_metrics.py  email_quality.py  faithfulness.py  hallucination.py  personalization.py
src/ingestion/: __init__.py
src/ingestion/chunking/: __init__.py  embeddings.py  strategies.py
src/ingestion/parsers/: __init__.py  html_parser.py  markdown_parser.py  pdf_parser.py
src/ingestion/scraper/: __init__.py  base.py  github_scraper.py  linkedin_scraper.py  web_scraper.py
src/monitoring/: __init__.py  cost_tracker.py  guardrails.py  metrics_collector.py  traces.py
src/rag/: __init__.py  pipeline.py
src/rag/knowledge_graph/: __init__.py  graph.py
src/rag/retriever/: __init__.py  dense.py  hybrid.py  reranker.py  sparse.py
src/rag/vectorstore/: __init__.py  chroma_store.py
src/training/: __init__.py  data_prep.py  lora_trainer.py  prompt_registry.py
tests/: __init__.py  conftest.py
tests/eval/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_api.py  test_chunking.py  test_retriever.py
